<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray">
    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/six_dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="@dimen/fourteen_sp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/search_no_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="No results"
        android:gravity="center"
        android:textSize="@dimen/six_teen_sp"/>]

    <LinearLayout
        android:id="@+id/show_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/list_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/six_dp"
            android:paddingStart="@dimen/eight_dp"
            android:paddingBottom="@dimen/six_dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showing"
                android:textSize="@dimen/fourteen_sp"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/six_dp"/>
            <TextView
                android:id="@+id/item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fourteen_sp"
                android:textColor="@color/btn_color"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/six_dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fourteen_sp"
                android:text="@string/results_for"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/six_dp"/>
            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/fourteen_sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</LinearLayout>